--- a/02-basics/templates/default/index.html.twig
+++ b/02-basics/templates/default/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Hello DefaultController!{% endblock %}
 
+{% set string = "some string \n from \n database" %}
+
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
@@ -9,29 +11,22 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello {{ controller_name|upper }}! ✅</h1>
 
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
-    <ul>
-        {% for user in users %}
-            <li>{{ user.name }} you won {{random_gift[loop.index0]}}</li>
-        {% endfor %}
-    </ul>
-    {% for message in app.flashes('notice') %}
-        <div class="flash-notice">
-            {{message}}
-        </div>
-    {% endfor %}
-    {% for label, messages in app.flashes %}
-        {% for message in messages %}
-            <div class="flash-{{label}}">
-                {{message}}
-            </div>
-        {% endfor %}
-    {% endfor %}
+    {{path('home')}}<br />
+    {{url('home')}}<br />
+    {{ asset('test.txt') }}<br />
+    {{ absolute_url(asset('test.txt')) }}
 </div>
+{% endblock %}
+{% block javascripts %}
+<script>
+    var route = "{{string|escape('js')}}";
+    alert(route);
+</script>
 {% endblock %}
