--- a/02-basics/templates/default/index.html.twig
+++ b/02-basics/templates/default/index.html.twig
@@ -2,8 +2,6 @@
 
 {% block title %}Hello DefaultController!{% endblock %}
 
-{% set string = "some string \n from \n database" %}
-
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
@@ -11,13 +9,16 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name|upper }}! ✅</h1>
+    <h1>Hello {{ controller_name }}! ✅</h1>
 
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
-    <p>The google tracking code is: {{ga_code}}</p>
+    {{app.user}}<br />
+    {{app.request.get("param")}}<br />
+    {{app.environment}}<br />
+    {{dump(app.session)}}
 </div>
 {% endblock %}
