--- a/02-basics/templates/default/index.html.twig
+++ b/02-basics/templates/default/index.html.twig
@@ -16,9 +16,9 @@
         <li>Your controller at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
-    {{app.user}}<br />
-    {{app.request.get("param")}}<br />
-    {{app.environment}}<br />
-    {{dump(app.session)}}
+    {{ render(controller(
+        'App\\Controller\\DefaultController::mostPopularPosts',
+        {'number': 8}
+    ))}}
 </div>
 {% endblock %}
