--- a/02-basics/templates/default/index.html.twig
+++ b/02-basics/templates/default/index.html.twig
@@ -16,5 +16,9 @@
         <li>Your controller at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
+    {# {{form_start(form)}}
+    {{form_widget(form)}}
+    {{form_end(form)}} #}
+    {{form(form)}}
 </div>
 {% endblock %}
