--- a/02-basics/templates/default/index.html.twig
+++ b/02-basics/templates/default/index.html.twig
@@ -16,7 +16,7 @@
         <li>Your controller at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
-    {%form_theme form 'form_table_layout.html.twig'%}
+    {# {%form_theme form 'form_table_layout.html.twig'%} #}
     {{form_start(form)}}
     {{form_label(form.title)}}
     {{form_widget(form.title)}}
