--- a/02-basics/templates/default/index.html.twig
+++ b/02-basics/templates/default/index.html.twig
@@ -16,6 +16,10 @@
         <li>Your controller at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/tobia/Desktop/Xampp/htdocs/02-basics/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
     </ul>
-    {{form(form)}}
+    {% if app.user %}
+        <a href="{{path('logout')}}">Logout</a>
+    {# {% else %}
+        {{form(form)}} #}
+    {% endif %}
 </div>
 {% endblock %}
