--- a/02-basics/templates/default/index.html.twig
+++ b/02-basics/templates/default/index.html.twig
@@ -21,5 +21,11 @@
     {% else %}
         <a href="/login">Have an account?</a>
     {% endif %}
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="...">Delete SOmething only Admins can do</a>
+    {% endif %}
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <p>Username: {{app.user.username}}</p>
+    {% endif %}
 </div>
 {% endblock %}
