--- a/02-basics/templates/default/index.html.twig
+++ b/02-basics/templates/default/index.html.twig
@@ -19,7 +19,7 @@
     {% if app.user %}
         <a href="{{path('logout')}}">Logout</a>
     {% else %}
-        <a href="/login">Have an account?</a>
+        <a href={{path("login")}}>Have an account?</a>
     {% endif %}
 </div>
 {% endblock %}
