--- a/05-video-sub-project/templates/admin/upload_video.html.twig
+++ b/05-video-sub-project/templates/admin/upload_video.html.twig
@@ -1,5 +1,6 @@
-<?php include('includes/_header.php'); ?>
+{% extends "admin/base.html.twig" %}
 
+{% block mainadmin %}
             <h2>Upload a video</h2>
 
             <form method="POST" action="#" enctype="multipart/form-data">
@@ -11,5 +12,4 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-
-<?php include('includes/_footer.php'); ?>
+{% endblock %}
