--- a/05-video-sub-project/templates/front/_main_categories.html.twig
+++ b/05-video-sub-project/templates/front/_main_categories.html.twig
@@ -1,4 +1,3 @@
 {% for category in main_categories %}
-    <a class="p-2 text-dark" href="{{path('video_list', {'categoryname':category.name|lower, 'id':category.id})}}">{{category.name}}</a>
+    <a class="p-2 text-dark" href="{{path('video_list', {'categoryname':category.name|lower|slugify, 'id':category.id})}}">{{category.name}}</a>
 {% endfor %}
-<a class="p-2 text-dark" href="{{path('admin_main_page')}}">My account</a>
