--- a/05-video-sub-project/templates/front/video_list.html.twig
+++ b/05-video-sub-project/templates/front/video_list.html.twig
@@ -8,7 +8,7 @@
         <section class="jumbotron text-center">
             <div class="container">
 
-                <h1 class="jumbotron-heading">Category - Funny</h1>
+                <h1 class="jumbotron-heading">Category - {{subcategories.currentCategoryName}}</h1>
                 {% if subcategories != '<ul></ul>' %}
                     <div class="btn-group">
                         <div class="dropdown ml-2">
@@ -18,7 +18,8 @@
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <ul class="mr-5">
-                                    {{subcategories|raw}}
+                                    <li><a href="{{path('video_list', {'categoryname': subcategories.mainParentName|slugify|lower, 'id':subcategories.mainParentId})}}">{{subcategories.mainParentName}}</a></li>
+                                    {{subcategories.categorielist|raw}}
                                 </ul>
                             </div>
                         </div>
