--- a/05-video-sub-project/templates/admin/edit_category.html.twig
+++ b/05-video-sub-project/templates/admin/edit_category.html.twig
@@ -4,17 +4,12 @@
     <h2>Editing category</h2>
 
     <form action="#" method="POST">
-        <input type="text" class="form-control is-invalid" id="validationServer01" placeholder="Category name" value="Funny"
+        <input type="text" class="form-control is-invalid" id="validationServer01" placeholder="Category name" value="{{category.name}}"
             required>
         <br>
         <label for="inlineFormCustomSelect">Parent:</label>
         <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-            <option value="1">Funny</option>
-            <option value="1">--For kids</option>
-            <option value="1">--For adults</option>
-            <option value="1">----For 60+</option>
-            <option value="2">Scary</option>
-            <option value="3">Motivating</option>
+            {{render(controller('App\\Controller\\AdminController::getAllCategories', {'editedCategory': category}))}}
         </select>
         <div class="invalid-feedback">
             Category already exists!
